@@ -8,6 +8,7 @@ This file documents the major additions and syntax changes between releases.
 	check_load can optionally divide by number of cpus
 	Fix check_time returning wrong OK when time is before the epoch on some arch
 	Make check_http output more consistent
+	check_snmp don't warn anymore if something is printed on stderr
 
 1.4.8 11th April 2007
 	Respects --without-world-permissions for setuid plugins
